Bug 66076 - FORMATTING of value-related color does not work with calculated values
Summary: FORMATTING of value-related color does not work with calculated values
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.1 rc
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-23 12:01 UTC by Michel Rudelle
Modified: 2013-06-29 12:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
File exemple with calculated values and value-related format (13.91 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-06-23 12:01 UTC, Michel Rudelle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michel Rudelle 2013-06-23 12:01:17 UTC
Created attachment 81265 [details]
File exemple with calculated values and value-related format

Steps to reproduce:
Open the attached Calc file:
This file contains 2 columns, A with numbers and B with formulas
Number format is:  # ##0;[RED]-# ##0

Red values are correctly displayed on column A but not in column B (correct display is achieved when pressing Crtl+Shit+F9)

Tested with:
Version: 4.1.0.1 Build ID: 1b3956717a60d6ac35b133d7b0a0f5eb55e9155 [Vista-32b]
and also (feedback from French lists):
version : 4.2.0.0.alpha0+ Build ID: c36348f20c4fcb6ae1acb0fd06c19edfa9fb108
[Windows 7 Home Premium]

@Markus:
I downloaded the 4.1 beta and found the bug still present:
Version: 4.1.0.0.beta2 Build ID: 33224f4f11a05cfad2249e812fcc2975fbb61f6 [Vista-32b]

Notice that's Ok for previous versions (4.0.3.3 and 4.0.4.2)
Comment 1 m_a_riosv 2013-06-23 13:41:40 UTC
Win7x64Ultimate

Reproducible if "Menu/Tools/Options/LibreOffice/Formula/Recalculation on file load" for ods files it is not "Always recalculate"

Version: 4.1.0.1 Build ID: 1b3956717a60d6ac35b133d7b0a0f5eb55e9155
Version: 4.2.0.0.alpha0+ Build ID: ce0383d2950d3b0da2c457c8a406c1229de53571
Comment 2 Michel Rudelle 2013-06-23 15:13:25 UTC
Indeed, you are right, this is the point, and the behaviour is the same with previous versions (4.0.3.3 and 4.0.4.2) - I was mistaken because in versions 4.0 this option was by default on "Always recalculate" and in version 4.1 on "Never recalculate".

I tested older versions (4.0.0.3 and 4.0.2.2) and I found they  behave in the same way according to this option. I don't understand what changed with the patch committed to fix bug 60215 and I wonder if this last one is really fixed ?

As far as I understand this option, there is an issue there because my file example was created and saved with LibreOffice and this option should not act in this case.
What should we do? change the subject of the issue ?  Open an other issue ?
What's your idea ?
Comment 3 Commit Notification 2013-06-23 20:04:48 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3f0b5770790dfcb408d169df1265546d6e8e3ece

we don't need this hack without inherited number formats, fdo#66076



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Markus Mohrhard 2013-06-27 18:09:26 UTC
Pending review for 4-1.
Comment 5 Michel Rudelle 2013-06-28 07:53:17 UTC
Thanks Markus,
It's OK with master~2013-06-27
Version: 4.2.0.0.alpha0+ Build ID: 7746de6e42d5957fa62fa278e2c46a0cb472dc01 [Vista-32b]
Looking forward to seeing it on 4.1
Comment 6 Commit Notification 2013-06-28 10:15:58 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b6233afdc65030fd7c4a57c5a2155f0d32b18df&h=libreoffice-4-1

we don't need this hack without inherited number formats, fdo#66076


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michel Rudelle 2013-06-29 12:50:44 UTC
Thanks Markus, It's OK for 4.1
Version: 4.1.0.1.0+ Build ID: ca0bbec3c9ce2defee96743cf63227e46cd01c1
TinderBox: Win-x86@6, Branch:libreoffice-4-1, Time: 2013-06-29_11:04:24
[Vista-32b]