we don't need this hack without inherited number formats, fdo#66076

Change-Id: If315ce28a4182019002141c7330475e0843f9a40