sc/source/core/tool/formularesult.cxx
@@ -430,23 +430,6 @@ void ScFormulaResult::SetHybridFormula( const String & rFormula )
     mbToken = true;
 }
 
-void ScFormulaResult::SetHybridValueString( double nVal, const OUString& rStr )
-{
-    if(GetType() == formula::svMatrixCell)
-    {
-        SetDouble(nVal);
-        return;
-    }
-
-    ResetToDefaults();
-    if (mbToken && mpToken)
-        mpToken->DecRef();
-
-    mpToken = new ScHybridValueCellToken( nVal, rStr );
-    mpToken->IncRef();
-    mbToken = true;
-}
-
 void ScFormulaResult::SetMatrix( SCCOL nCols, SCROW nRows, const ScConstMatrixRef& pMat, formula::FormulaToken* pUL )
 {
     ResetToDefaults();
